css was changed because I am getting bored of seing the same thing again and again. Also I fixed the bomb node not showing after clearing the hexboard

--- a/src/visualise-graphs/css/app.css
+++ b/src/visualise-graphs/css/app.css
@@ -1,31 +1,27 @@
 :root {
-    --white: #cdd6f4;
-    --cmd-bg: #11111b;
-    --cmd-border: #181825;
-    --project-bg: #1e1e2e;
+    --white: #b7b7b7;
+    --cmd-bg: #0c0b0b;
+    --cmd-border: #1a1a1a;
     --moz-sb-color: #313244;
     --sb-color: #45475a;
     --sb-color-hover: #585b70;
     --sb-color-track: #1e1e2e;
-    --file-hover: #1e1e2e;
-    --hex-color: #11111b;
+    --hex-color: #0c0b0b;
     --hex-color-hover: #89b4fa;
-    --wall-node-color: #313244;
-    --path-node-color-1: #f5c2e7;
-    --path-node-color-2: #f2cdcd;
-    --path-node-color-3: #f5c2e7;
-    --path-node-color-4: #cba6f7;
-    --path-node-color-5: #f38ba8;
+    --wall-node-color: #212121;
+    --path-node-color-1: #ff740d;
+    --path-node-color-2: #ff5b00;
+    --path-node-color-3: rgb(255, 145, 0);
+    --path-node-color-4: rgb(255, 164, 0);
+    --path-node-color-5: rgb(255, 115, 0);
     --visited-node-color-1: #6184c4;
     --visited-node-color-2: #59a8ce;
     --visited-node-color-3: #1e8576;
     --visited-node-color-11: #eba0ac;
     --visited-node-color-21: #f38ba8;
     --visited-node-color-31: #cba6f7;
-    --file-bg: #11111b;
-    --file-bg-selected: #11111b;
-    --file-border: #67BBFF;
-    --visited-node-color31: #85404F;
+    --file-bg: #0c0b0b;
+    --file-bg-selected: rgba(17, 17, 27, 0.63);
 }
 
 .content {
@@ -37,5 +33,5 @@
 
 .left-cmd {
     width: 30vw;
-    border-right: 0.75px solid var(--cmd-border);
+    border-right: 1px solid var(--cmd-border);
 }
