--- a/src/visualise-graphs/css/index.css
+++ b/src/visualise-graphs/css/index.css
@@ -1,6 +1,6 @@
 ﻿body,
 html {
-    background-color: #262b3d;
+    background-color: #000000;
     height: 90vh;
     padding: 0;
     margin: 0;
